feat: prisma config

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,9 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
+
+# For serverless deployments, use the following format:
+# https://supabase.com/docs/guides/integrations/prisma#connection-pooling-with-supabase
+
+DIRECT_URL="postgresql://[USERNAME]:[PASSWORD]@<host>:<port>/<database>"
 DATABASE_URL="postgresql://[USERNAME]:[PASSWORD]@<host>:<port>/<database>"
