--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@
 
 DIRECT_URL="postgresql://[USERNAME]:[PASSWORD]@<host>:<port>/<database>"
 DATABASE_URL="postgresql://[USERNAME]:[PASSWORD]@<host>:<port>/<database>"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
+CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
