--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@chakra-ui/card": "^2.1.6",
 		"@chakra-ui/menu": "^2.1.12",
 		"@chakra-ui/next-js": "^2.1.2",
 		"@chakra-ui/react": "^2.5.5",
@@ -23,11 +24,14 @@
 		"@trpc/next": "^10.18.0",
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
+		"class-variance-authority": "^0.5.2",
+		"classnames": "^2.3.2",
 		"framer-motion": "^10.12.4",
 		"next": "^13.3.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"superjson": "1.12.2",
+		"tailwind-merge": "^1.12.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
