--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,8 @@
 		"**/*.tsx",
 		"**/*.cjs",
 		"**/*.mjs",
-		".next/types/**/*.ts"
+		".next/types/**/*.ts",
+		"types/**/*.d.ts"
 	],
 	"exclude": [
 		"node_modules"
