--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@chakra-ui/next-js": "^2.1.2",
 		"@chakra-ui/react": "^2.5.5",
 		"@chakra-ui/system": "^2.5.5",
+		"@clerk/backend": "^0.17.2",
 		"@clerk/nextjs": "^4.16.4",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
