--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@clerk/nextjs": "^4.16.4",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
+		"@hookform/resolvers": "^3.1.0",
 		"@prisma/client": "^4.11.0",
 		"@tanstack/react-query": "^4.28.0",
 		"@trpc/client": "^10.18.0",
@@ -31,6 +32,8 @@
 		"next": "^13.3.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.43.9",
+		"react-toastify": "^9.1.2",
 		"superjson": "1.12.2",
 		"tailwind-merge": "^1.12.0",
 		"zod": "^3.21.4"
