--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@chakra-ui/select": "^2.0.19",
 		"@chakra-ui/system": "^2.5.5",
 		"@clerk/backend": "^0.17.2",
+		"@clerk/clerk-sdk-node": "^4.8.6",
 		"@clerk/nextjs": "^4.16.4",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
@@ -51,8 +52,8 @@
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.14",
-		"eslint": "^8.36.0",
-		"eslint-config-next": "^13.2.4",
+		"eslint": "^8.38.0",
+		"eslint-config-next": "^13.3.2",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.6",
 		"prettier-plugin-tailwindcss": "^0.2.6",
