--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
 		"@trpc/next": "^10.18.0",
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
+		"@uiw/react-md-editor": "^3.20.9",
 		"class-variance-authority": "^0.5.2",
 		"classnames": "^2.3.2",
+		"dompurify": "^3.0.2",
 		"framer-motion": "^10.12.4",
 		"next": "^13.3.1",
+		"next-remove-imports": "^1.0.11",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.9",
@@ -44,6 +47,7 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
+		"@types/dompurify": "^3.0.2",
 		"@types/eslint": "^8.21.3",
 		"@types/node": "^18.15.5",
 		"@types/prettier": "^2.7.2",
