--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"allowJs": true,
 		"checkJs": true,
 		"skipLibCheck": true,
+		"skipDefaultLibCheck": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": true,
