--- a/package.json
+++ b/package.json
@@ -32,15 +32,19 @@
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
 		"@uiw/react-md-editor": "^3.20.9",
+		"axios": "^1.4.0",
 		"class-variance-authority": "^0.5.2",
 		"classnames": "^2.3.2",
 		"dompurify": "^3.0.2",
 		"framer-motion": "^10.12.4",
+		"js-cookie": "^3.0.5",
+		"jwt-decode": "^3.1.2",
 		"next": "^13.3.1",
 		"next-remove-imports": "^1.0.11",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.9",
+		"react-icons": "^4.8.0",
 		"react-toastify": "^9.1.2",
 		"superjson": "1.12.2",
 		"tailwind-merge": "^1.12.0",
@@ -49,6 +53,7 @@
 	"devDependencies": {
 		"@types/dompurify": "^3.0.2",
 		"@types/eslint": "^8.21.3",
+		"@types/js-cookie": "^3.0.3",
 		"@types/node": "^18.15.5",
 		"@types/prettier": "^2.7.2",
 		"@types/react": "^18.0.28",
